...
        android:textAlignment="center"
        android:textColor="@color/colorText"
        android:textSize="30sp"
        android:textStyle="bold" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/appCompatButton_changedifficulty"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="28dp"
        android:background="@color/colorTextHint"
        android:elevation="0dp"
        android:text="Change difficulty"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:layout_below="@+id/text_settings"
        android:layout_centerHorizontal="true" />

...
