...
    android:background="@color/colorPrimary"
    android:baselineAligned="false"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:id="@+id/text_welcome"
        android:layout_width="371dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="34dp"
...
        android:textAlignment="viewStart"
        android:textColor="@color/colorText"
        android:textSize="21sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_valueStatistics"
        android:layout_width="wrap_content"
        android:layout_height="290dp"
        android:layout_alignBaseline="@+id/text_labelsStatistics"
        android:layout_alignBottom="@+id/text_labelsStatistics"
        android:layout_alignEnd="@+id/text_welcome"
        android:layout_marginEnd="45dp"
...
